// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectBase> renders SelectBase correctly 1`] = `
<div
  className="af-form__select-container"
>
  <select
    className="af-form__input-select"
    disabled={false}
    id="muid"
    name="placeName"
    onBlur={null}
    onChange={[Function]}
    onFocus={null}
    readOnly={false}
    value="myvalue"
    values={null}
  >
    <option
      value="fun"
    >
      For fun
    </option>
    <option
      value="work"
    >
      For work
    </option>
    <option
      value="drink"
    >
      For drink
    </option>
  </select>
  <span
    aria-controls="muid"
    className="glyphicon glyphicon-menu-down"
  />
</div>
`;

exports[`<SelectBase> renders SelectBase correctly 2`] = `
<div
  className="af-form__select-container"
>
  <select
    className="af-form__input-select"
    disabled={false}
    id="muid"
    name="placeName"
    onBlur={null}
    onChange={[Function]}
    onFocus={null}
    readOnly={false}
    value="myvalue"
    values={null}
  >
    <option
      value="fun"
    >
      For fun
    </option>
    <option
      value="work"
    >
      For work
    </option>
    <option
      value="drink"
    >
      For drink
    </option>
  </select>
  <span
    aria-controls="muid"
    className="glyphicon glyphicon-menu-down"
  />
</div>
`;

exports[`<SelectBase> renders SelectBase correctly 3`] = `
<div
  className="row af-form__group"
>
  <div
    className="col-md-2"
  >
    <label
      className="af-form__group-label"
      htmlFor="muid"
    />
  </div>
  <div
    className="col-md-10"
  >
    <div
      className="af-form__select"
    >
      <div
        className="af-form__select-container"
      >
        <select
          autoFocus={null}
          className="af-form__input-select"
          disabled={false}
          id="muid"
          name="placeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          tabIndex={null}
          value="myvalue"
          values={null}
        >
          <option
            value="fun"
          >
            For fun
          </option>
          <option
            value="work"
          >
            For work
          </option>
          <option
            value="drink"
          >
            For drink
          </option>
        </select>
        <span
          aria-controls="muid"
          className="glyphicon glyphicon-menu-down"
        />
      </div>
    </div>
    <small
      className="af-form__help"
    >
      Enter the place type
    </small>
  </div>
</div>
`;
